syntax = "proto3";

package ethereum.eth.v1alpha1;

import "proto/eth/ext/options.proto";

option csharp_namespace = "Ethereum.Eth.v1alpha1";
option go_package = "github.com/prysmaticlabs/prysm/proto/eth/v1alpha1;eth";
option java_multiple_files = true;
option java_outer_classname = "PandoraShardProto";
option java_package = "org.ethereum.eth.v1alpha1";
option php_namespace = "Ethereum\\Eth\\v1alpha1";

message PandoraShard {
  // Current block number of the sharding chain
  uint64 block_number = 1;
  // Current hash of the pandora sharding block
  bytes hash = 2 [(ethereum.eth.ext.ssz_size) = "32"];
  // Parent hash of the pandora sharding block
  bytes parent_hash = 3 [(ethereum.eth.ext.ssz_size) = "32"];
  // State root of the pandora sharding block header
  bytes state_root = 4 [(ethereum.eth.ext.ssz_size) = "32"];
  // Transaction hash of the pandora sharding block
  bytes tx_hash = 5 [(ethereum.eth.ext.ssz_size) = "32"];
  // Receipt hash of the pandora sharding block
  bytes receipt_hash = 6 [(ethereum.eth.ext.ssz_size) = "32"];
  // Seal hash of the pandora sharding block header
  bytes seal_hash = 7 [(ethereum.eth.ext.ssz_size) = "32"];
  // 96 byte bls signature of pandora header
  bytes signature = 8 [(ethereum.eth.ext.ssz_size) = "96"];
}